--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+name: myapp-service
 spec:
-  type: NodePort
-  selector:
-    app: myapp
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
+type: NodePort
+selector:
+app: myapp
+ports:
+
+protocol: TCP
+port: 80
+targetPort: 3000
